[package]
name = "minikeyvalue"
version = "0.1.0"
edition = "2021"


[dependencies]
base64 = "0.13"
reqwest = "0.11"
warp = "0.3"
structopt = "0.3"
xml-rs = "0.8"
leveldb = "0.8.6"
md5 = { package = "md-5" , version = "0.10.5" }
quick-xml = "0.30.0"
serde = { version = "1.0", features = ["derive"] }
serde-xml-rs = "0.5"


[[bin]]
name="mkv"
path = "src/main.rs"
